Fix z-index of triangle

--- a/app/assets/stylesheets/metaproteomics_results.css.less
+++ b/app/assets/stylesheets/metaproteomics_results.css.less
@@ -307,7 +307,7 @@ span.dir.text {
     border-top: 30px solid transparent;
     border-bottom: 30px solid transparent;
     border-right: 30px solid #2196F3;
-    z-index: 100000;
+    z-index: 5;
     position: absolute;
     left: -15px;
 }
